--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -292,7 +292,7 @@
                                 <button type="button" class="btn btn-light bg-white btn-icon me-3 mt-2 mt-xl-0">
                                     <i class="mdi mdi-plus text-muted"></i>
                                 </button>
-                                <button class="btn btn-primary mt-2 mt-xl-0">Generate report</button>
+                                <button class="btn btn-info mt-2 mt-xl-0">Generate report</button>
                             </div>
                         </div>
                     </div>
