--- a/public/dashboard/pages/ui-features/buttons.html
+++ b/public/dashboard/pages/ui-features/buttons.html
@@ -21,13 +21,13 @@
     <!-- partial:../../partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="navbar-brand-wrapper d-flex justify-content-center">
-        <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">  
+        <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">
           <a class="navbar-brand brand-logo" href="../../index.html"><img src="../../images/logo.svg" alt="logo"/></a>
           <a class="navbar-brand brand-logo-mini" href="../../index.html"><img src="../../images/logo-mini.svg" alt="logo"/></a>
           <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
             <span class="mdi mdi-sort-variant"></span>
           </button>
-        </div>  
+        </div>
       </div>
       <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
         <ul class="navbar-nav mr-lg-4 w-100">
@@ -231,7 +231,7 @@
         </ul>
       </nav>
       <!-- partial -->
-      <div class="main-panel">          
+      <div class="main-panel">
         <div class="content-wrapper">
           <div class="row">
             <div class="col-12 grid-margin stretch-card">
@@ -242,7 +242,7 @@
                       <h4 class="card-title">Single color buttons</h4>
                       <p class="card-description">Add class <code>.btn-{color}</code> for buttons in theme colors</p>
                       <div class="template-demo">
-                        <button type="button" class="btn btn-primary">Primary</button>
+                        <button type="button" class="btn btn-info">Primary</button>
                         <button type="button" class="btn btn-secondary">Secondary</button>
                         <button type="button" class="btn btn-success">Success</button>
                         <button type="button" class="btn btn-danger">Danger</button>
@@ -259,7 +259,7 @@
                       <h4 class="card-title">Rounded buttons</h4>
                       <p class="card-description">Add class <code>.btn-rounded</code></p>
                       <div class="template-demo">
-                        <button type="button" class="btn btn-primary btn-rounded btn-fw">Primary</button>
+                        <button type="button" class="btn btn-info btn-rounded btn-fw">Primary</button>
                         <button type="button" class="btn btn-secondary btn-rounded btn-fw">Secondary</button>
                         <button type="button" class="btn btn-success btn-rounded btn-fw">Success</button>
                         <button type="button" class="btn btn-danger btn-rounded btn-fw">Danger</button>
@@ -322,7 +322,7 @@
                     <h4 class="card-title">Icon Buttons</h4>
                     <p class="card-description">Add class <code>.btn-icon</code> for buttons with only icons</p>
                     <div class="template-demo d-flex justify-content-between flex-nowrap">
-                      <button type="button" class="btn btn-primary btn-rounded btn-icon">
+                      <button type="button" class="btn btn-info btn-rounded btn-icon">
                         <i class="mdi mdi-home-outline"></i>
                       </button>
                       <button type="button" class="btn btn-dark btn-rounded btn-icon">
@@ -366,10 +366,10 @@
                         <i class="mdi mdi-star text-primary"></i>
                       </button>
                       <button type="button" class="btn btn-outline-secondary btn-rounded btn-icon">
-                        <i class="mdi mdi-signal text-info"></i>                          
+                        <i class="mdi mdi-signal text-info"></i>
                       </button>
                       <button type="button" class="btn btn-outline-secondary btn-rounded btn-icon">
-                        <i class="mdi mdi-trending-up text-success"></i>                          
+                        <i class="mdi mdi-trending-up text-success"></i>
                       </button>
                     </div>
                     <div class="template-demo d-flex justify-content-between flex-nowrap">
@@ -383,14 +383,14 @@
                         <i class="mdi mdi-star"></i>
                       </button>
                       <button type="button" class="btn btn-outline-secondary btn-rounded btn-icon">
-                        <i class="mdi mdi-signal"></i>                          
+                        <i class="mdi mdi-signal"></i>
                       </button>
                       <button type="button" class="btn btn-outline-secondary btn-rounded btn-icon">
-                        <i class="mdi mdi-trending-up"></i>                          
+                        <i class="mdi mdi-trending-up"></i>
                       </button>
                     </div>
                   </div>
-                  </div> 
+                  </div>
                   <div class="col-md-5">
                     <div class="card-body">
                       <h4 class="card-title">Button Size</h4>
@@ -403,7 +403,7 @@
                       <div class="template-demo mt-4">
                         <button type="button" class="btn btn-danger btn-lg">btn-lg</button>
                         <button type="button" class="btn btn-success btn-md">btn-md</button>
-                        <button type="button" class="btn btn-primary btn-sm">btn-sm</button>
+                        <button type="button" class="btn btn-info btn-sm">btn-sm</button>
                       </div>
                     </div>
                   </div>
@@ -420,8 +420,8 @@
                       <i class="mdi mdi-menu float-right"></i>
                     </button>
                     <button type="button" class="btn btn-dark btn-lg btn-block">Block buttons</button>
-                    <button type="button" class="btn btn-primary btn-lg btn-block">
-                      <i class="mdi mdi-account"></i>                      
+                    <button type="button" class="btn btn-info btn-lg btn-block">
+                      <i class="mdi mdi-account"></i>
                       Block buttons
                     </button>
                     <button type="button" class="btn btn-outline-secondary btn-lg btn-block">Block buttons</button>
@@ -435,7 +435,7 @@
                   <div class="col-md-6">
                     <div class="card-body">
                       <h4 class="card-title">Button groups</h4>
-                      <p class="card-description">Wrap a series of buttons with <code>.btn</code> 
+                      <p class="card-description">Wrap a series of buttons with <code>.btn</code>
                         in <code>.btn-group</code></p>
                       <div class="template-demo">
                         <div class="btn-group" role="group" aria-label="Basic example">
@@ -457,18 +457,18 @@
                       </div>
                       <div class="template-demo">
                         <div class="btn-group" role="group" aria-label="Basic example">
-                          <button type="button" class="btn btn-primary">1</button>
-                          <button type="button" class="btn btn-primary">2</button>
-                          <button type="button" class="btn btn-primary">3</button>
+                          <button type="button" class="btn btn-info">1</button>
+                          <button type="button" class="btn btn-info">2</button>
+                          <button type="button" class="btn btn-info">3</button>
                         </div>
                         <div class="btn-group" role="group" aria-label="Basic example">
-                          <button type="button" class="btn btn-primary">
+                          <button type="button" class="btn btn-info">
                             <i class="mdi mdi-heart-outline"></i>
                           </button>
-                          <button type="button" class="btn btn-primary">
+                          <button type="button" class="btn btn-info">
                             <i class="mdi mdi-calendar"></i>
                           </button>
-                          <button type="button" class="btn btn-primary">
+                          <button type="button" class="btn btn-info">
                             <i class="mdi mdi-clock"></i>
                           </button>
                         </div>
@@ -493,13 +493,13 @@
                               <a class="dropdown-item">Go back</a>
                               <a class="dropdown-item">Delete</a>
                               <a class="dropdown-item">Swap</a>
-                            </div>                          
+                            </div>
                           </div>
                           <button type="button" class="btn btn-outline-secondary">Default</button>
                         </div>
                         <div class="btn-group-vertical" role="group" aria-label="Basic example">
                           <button type="button" class="btn btn-outline-secondary">Top</button>
-                          <button type="button" class="btn btn-outline-secondary">Middle</button>                          
+                          <button type="button" class="btn btn-outline-secondary">Middle</button>
                           <button type="button" class="btn btn-outline-secondary">Bottom</button>
                         </div>
                       </div>
@@ -508,33 +508,33 @@
                   <div class="col-md-6">
                     <div class="card-body">
                       <h4 class="card-title">Button with text and icon</h4>
-                      <p class="card-description">Wrap icon and text inside <code>.btn-icon-text</code> and use <code>.btn-icon-prepend</code> 
+                      <p class="card-description">Wrap icon and text inside <code>.btn-icon-text</code> and use <code>.btn-icon-prepend</code>
                         or <code>.btn-icon-append</code> for icon tags</p>
                       <div class="template-demo">
-                        <button type="button" class="btn btn-primary btn-icon-text">
+                        <button type="button" class="btn btn-info btn-icon-text">
                           <i class="mdi mdi-file-check btn-icon-prepend"></i>
                           Submit
                         </button>
                         <button type="button" class="btn btn-dark btn-icon-text">
                           Edit
-                          <i class="mdi mdi-file-check btn-icon-append"></i>                          
+                          <i class="mdi mdi-file-check btn-icon-append"></i>
                         </button>
                         <button type="button" class="btn btn-success btn-icon-text">
-                          <i class="mdi mdi-alert btn-icon-prepend"></i>                                                    
+                          <i class="mdi mdi-alert btn-icon-prepend"></i>
                           Warning
                         </button>
                       </div>
                       <div class="template-demo">
                         <button type="button" class="btn btn-danger btn-icon-text">
-                          <i class="mdi mdi-upload btn-icon-prepend"></i>                                                    
+                          <i class="mdi mdi-upload btn-icon-prepend"></i>
                           Upload
                         </button>
                         <button type="button" class="btn btn-info btn-icon-text">
                           Print
-                          <i class="mdi mdi-printer btn-icon-append"></i>                                                                              
+                          <i class="mdi mdi-printer btn-icon-append"></i>
                         </button>
                         <button type="button" class="btn btn-warning btn-icon-text">
-                          <i class="mdi mdi-reload btn-icon-prepend"></i>                                                    
+                          <i class="mdi mdi-reload btn-icon-prepend"></i>
                           Reset
                         </button>
                       </div>
@@ -545,24 +545,24 @@
                         </button>
                         <button type="button" class="btn btn-outline-secondary btn-icon-text">
                           Edit
-                          <i class="mdi mdi-file-check btn-icon-append"></i>                          
+                          <i class="mdi mdi-file-check btn-icon-append"></i>
                         </button>
                         <button type="button" class="btn btn-outline-success btn-icon-text">
-                          <i class="mdi mdi-alert btn-icon-prepend"></i>                                                    
+                          <i class="mdi mdi-alert btn-icon-prepend"></i>
                           Warning
                         </button>
                       </div>
                       <div class="template-demo">
                         <button type="button" class="btn btn-outline-danger btn-icon-text">
-                          <i class="mdi mdi-upload btn-icon-prepend"></i>                                                    
+                          <i class="mdi mdi-upload btn-icon-prepend"></i>
                           Upload
                         </button>
                         <button type="button" class="btn btn-outline-info btn-icon-text">
                           Print
-                          <i class="mdi mdi-printer btn-icon-append"></i>                                                                              
+                          <i class="mdi mdi-printer btn-icon-append"></i>
                         </button>
                         <button type="button" class="btn btn-outline-warning btn-icon-text">
-                          <i class="mdi mdi-reload btn-icon-prepend"></i>                                                    
+                          <i class="mdi mdi-reload btn-icon-prepend"></i>
                           Reset
                         </button>
                       </div>
@@ -594,7 +594,7 @@
                   <p class="card-description">Add class <code>.btn-social-icon</code></p>
                   <div class="template-demo">
                     <button type="button" class="btn btn-social-icon btn-outline-facebook"><i class="mdi mdi-facebook"></i></button>
-                    <button type="button" class="btn btn-social-icon btn-outline-youtube"><i class="mdi mdi-youtube"></i></button>                                        
+                    <button type="button" class="btn btn-social-icon btn-outline-youtube"><i class="mdi mdi-youtube"></i></button>
                     <button type="button" class="btn btn-social-icon btn-outline-twitter"><i class="mdi mdi-twitter"></i></button>
                     <button type="button" class="btn btn-social-icon btn-outline-dribbble"><i class="mdi mdi-dribbble"></i></button>
                     <button type="button" class="btn btn-social-icon btn-outline-linkedin"><i class="mdi mdi-linkedin"></i></button>
@@ -602,7 +602,7 @@
                   </div>
                   <div class="template-demo">
                     <button type="button" class="btn btn-social-icon btn-facebook"><i class="mdi mdi-facebook"></i></button>
-                    <button type="button" class="btn btn-social-icon btn-youtube"><i class="mdi mdi-youtube"></i></button>                                        
+                    <button type="button" class="btn btn-social-icon btn-youtube"><i class="mdi mdi-youtube"></i></button>
                     <button type="button" class="btn btn-social-icon btn-twitter"><i class="mdi mdi-twitter"></i></button>
                     <button type="button" class="btn btn-social-icon btn-dribbble"><i class="mdi mdi-dribbble"></i></button>
                     <button type="button" class="btn btn-social-icon btn-linkedin"><i class="mdi mdi-linkedin"></i></button>
@@ -610,7 +610,7 @@
                   </div>
                   <div class="template-demo">
                     <button type="button" class="btn btn-social-icon btn-facebook btn-rounded"><i class="mdi mdi-facebook"></i></button>
-                    <button type="button" class="btn btn-social-icon btn-youtube btn-rounded"><i class="mdi mdi-youtube"></i></button>                                        
+                    <button type="button" class="btn btn-social-icon btn-youtube btn-rounded"><i class="mdi mdi-youtube"></i></button>
                     <button type="button" class="btn btn-social-icon btn-twitter btn-rounded"><i class="mdi mdi-twitter"></i></button>
                     <button type="button" class="btn btn-social-icon btn-dribbble btn-rounded"><i class="mdi mdi-dribbble"></i></button>
                     <button type="button" class="btn btn-social-icon btn-linkedin btn-rounded"><i class="mdi mdi-linkedin"></i></button>
@@ -626,7 +626,7 @@
                   <p class="card-description">Add class <code>.btn-social-icon-text</code></p>
                   <div class="template-demo">
                     <button type="button" class="btn btn-social-icon-text btn-facebook"><i class="mdi mdi-facebook"></i>Facebook</button>
-                    <button type="button" class="btn btn-social-icon-text btn-youtube"><i class="mdi mdi-youtube"></i>Youtube</button>                                        
+                    <button type="button" class="btn btn-social-icon-text btn-youtube"><i class="mdi mdi-youtube"></i>Youtube</button>
                     <button type="button" class="btn btn-social-icon-text btn-twitter"><i class="mdi mdi-twitter"></i>Twitter</button>
                     <button type="button" class="btn btn-social-icon-text btn-dribbble"><i class="mdi mdi-dribbble"></i>Dribbble</button>
                     <button type="button" class="btn btn-social-icon-text btn-linkedin"><i class="mdi mdi-linkedin"></i>Linkedin</button>
